samples/_failures_safe/1761507169_13da76_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_418df0fa.c: In function ‘main’:
./samples/SAFE/__tmp_418df0fa.c:146:5: error: expected declaration or statement at end of input
  146 |     } else {
      |     ^
./samples/SAFE/__tmp_418df0fa.c:146:5: error: expected declaration or statement at end of input
